--- a/package.json
+++ b/package.json
@@ -27,12 +27,19 @@
   "devDependencies": {
     "@angular/cli": "1.0.0",
     "@angular/compiler-cli": "^4.0.0",
+    "@types/chai": "^3.5.0",
+    "@types/mocha": "^2.2.40",
     "@types/node": "~6.0.60",
+    "chai": "^3.5.0",
     "codelyzer": "~2.0.0",
     "karma": "~1.4.1",
+    "karma-chai": "^0.1.0",
     "karma-chrome-launcher": "~2.0.0",
     "karma-cli": "~1.0.1",
     "karma-coverage-istanbul-reporter": "^0.2.0",
+    "karma-mocha": "^1.3.0",
+    "karma-mocha-reporter": "^2.2.3",
+    "mocha": "^3.2.0",
     "protractor": "~5.1.0",
     "ts-node": "~2.0.0",
     "tslint": "~4.5.0",
